# remote-mcp-linkedin

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BRIDGE_PROTOCOL.md  DEVELOPMENT.md  DOSSIER_SCHEMA.md  SECURITY.md
tests/: test_bridge_routing.py  test_cli_imports.py  test_dossier_builder.py  test_mcp_flow.py  test_protocol_schemas.py
