[project]
name = "remote-mcp-linkedin"
version = "0.1.0"
description = "Remote LinkedIn MCP server with a local read-only browser bridge."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "remote-mcp-linkedin contributors" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "linkedin",
    "browser-bridge",
    "open-source",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.7.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
browser = [
    "patchright>=1.40.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/alexanderskorokhodov/remote-mcp-linkedin"
Repository = "https://github.com/alexanderskorokhodov/remote-mcp-linkedin"
Issues = "https://github.com/alexanderskorokhodov/remote-mcp-linkedin/issues"

[project.scripts]
remote-mcp-linkedin-server = "remote_mcp_linkedin_server.main:main"
remote-mcp-linkedin-bridge = "remote_mcp_linkedin_bridge.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [
    "packages/server",
    "packages/bridge",
    "packages/protocol",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
